force-app/src/objects/TR1__Email_Page_Type__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Default_Email_Folder__c</fullName>
        <description>Stores the API name of the email template folder that will be pre-selected in the Email Editor for the current Email Page Type record.</description>
        <inlineHelpText>Stores the API name of the email template folder that will be pre-selected in the Email Editor for the current Email Page Type record.</inlineHelpText>
        <label>Default Email Folder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TR1__Email_Template_Folders</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Default_Email_Template__c</fullName>
        <description>Stores the identifier of the email template that will be pre-selected in the Email Editor for the current Email Page Type record. The following 3 types are supported: Classic Salesforce Email Template Developer Name, or External Id/Campaign Unique Name(SFMC Integration only).</description>
        <inlineHelpText>Stores the identifier of the email template that will be pre-selected in the Email Editor for the current Email Page Type record. The following 3 types are supported: Classic Salesforce Email Template Developer Name, or External Id/Campaign Unique Name(SFMC Integration only).</inlineHelpText>
        <label>Default Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Interviewee_Email_Folder__c</fullName>
        <description>Stores the API name of the email template folder that will be pre-selected in the Email Editor for an Interviewee for the current Email Page Type record.</description>
        <inlineHelpText>Stores the API name of the email template folder that will be pre-selected in the Email Editor for an Interviewee for the current Email Page Type record.</inlineHelpText>
        <label>Default Interviewee Email Folder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TR1__Email_Template_Folders</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Default_Interviewee_Email_Template__c</fullName>
        <description>Stores the identifier of the email template that will be pre-selected in the Email Editor for an Interviewee for the current Email Page Type record.</description>
        <inlineHelpText>Stores the identifier of the email template that will be pre-selected in the Email Editor for an Interviewee for the current Email Page Type record.</inlineHelpText>
        <label>Default Interviewee Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Default_Interviewer_Email_Folder__c</fullName>
        <description>Stores the API name of the email template folder that will be pre-selected in the Email Editor for an Interviewer for the current Email Page Type record.</description>
        <inlineHelpText>Stores the API name of the email template folder that will be pre-selected in the Email Editor for an Interviewer for the current Email Page Type record.</inlineHelpText>
        <label>Default Interviewer Email Folder</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TR1__Email_Template_Folders</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Default_Interviewer_Email_Template__c</fullName>
        <description>Stores the identifier of the email template that will be pre-selected in the Email Editor for an Interviewer for the current Email Page Type record.</description>
        <inlineHelpText>Stores the identifier of the email template that will be pre-selected in the Email Editor for an Interviewer for the current Email Page Type record.</inlineHelpText>
        <label>Default Interviewer Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Email_Template_Folders__c</fullName>
        <description>Stores names of the folders under which email templates related to the current email page type should appear. Note: in case if the message preview from SFMC Cloud Page is enabled the folders don’t represent the SF Folders on the org and should match folders specified at some Campaign Template Mappings.</description>
        <inlineHelpText>Stores names of the folders under which email templates related to the current email page type should appear. Note: in case if the message preview from SFMC Cloud Page is enabled the folders don’t represent the SF Folders on the org and should match folders specified at some Campaign Template Mappings.</inlineHelpText>
        <label>Email Template Folders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TR1__Email_Template_Folders</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Email_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Email Type</label>
        <referenceTo>TR1__Email_Type__c</referenceTo>
        <relationshipLabel>Email Page Types</relationshipLabel>
        <relationshipName>Email_Page_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Page_Type__c</fullName>
        <label>Page Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>StandardCallList</fullName>
                    <label>Call List - Standard</label>
                </value>
                <value>
                    <fullName>MarketingCallList</fullName>
                    <label>Call List - Candidate Marketing</label>
                </value>
                <value>
                    <fullName>ShareCV</fullName>
                    <label>CV Manager - Share CV</label>
                </value>
                <value>
                    <fullName>LongList</fullName>
                    <label>Long List</label>
                </value>
                <value>
                    <fullName>RegistrationInterview</fullName>
                    <label>Registration Interview</label>
                </value>
                <value>
                    <fullName>JobLeadEmail</fullName>
                    <label>Job Lead Email</label>
                </value>
                <value>
                    <fullName>TextKernelSamEmail</fullName>
                    <label>TextKernel Sam Email</label>
                </value>
                <value>
                    <fullName>SendEmail</fullName>
                    <label>ATSv2 - Send Email</label>
                </value>
                <value>
                    <fullName>InternalInterview</fullName>
                    <label>ATSv2 - Internal Interview</label>
                </value>
                <value>
                    <fullName>SendOutSchedule</fullName>
                    <label>ATSv2 - SendOut Schedule</label>
                </value>
                <value>
                    <fullName>SubmitWithEmail</fullName>
                    <label>ATSv2 - Submit With Email</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Page Type</label>
    <nameField>
        <label>Email Page Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Email Page Types</pluralLabel>
    <recordTypes>
        <fullName>TR1__Basic</fullName>
        <active>true</active>
        <description>Record type for basic Email Page Types</description>
        <label>Basic</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Interview</fullName>
        <active>true</active>
        <description>Record type for Email Page Types that contains interview-specific settings</description>
        <label>Interview</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>